--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -482,6 +482,7 @@ h2{
 p {
         color: #2a2f45;
         margin-top: 1rem;
+        font-weight: 300;
     }
 
 
@@ -1401,6 +1402,12 @@ code:not(pre *) {
 
 pre {
     font-size: 12px!important;
+}
+
+
+.active {
+    transition: color .3s ease-in-out;
+    color: #282828;
 }
 
 
