--- a/resources/views/sdk/show.antlers.html
+++ b/resources/views/sdk/show.antlers.html
@@ -28,9 +28,7 @@
                     </div>
 
                 </div>
-                {{# <div class="example">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quo adipisci odit
-                    repellendus fugiat eos, quibusdam harum a illum, tempore amet eligendi. Eaque quisquam deserunt
-                    molestias aliquam enim explicabo numquam.</div> #}}
+                <div class="example relative">Resources and some other links and things would go here.</div>
             </div>
 
         </section>
@@ -49,16 +47,16 @@
             <div class="h-px w-full bg-grey-200 z-20 sticky top-14"></div>
             <div class="w-full h-px bg-light-blue-50 z-[21] mt-[-1px]"></div>
             <div class="flex flex-row w-full p-20 pt-0 sticky top-0">
-                <div class="copy">
+                <div class="copy prose prose-code:font-light prose-code:text-xs">
                     <div>
                         <p>{{description | markdown}}</p>
                     </div>
                     {{if options }}
                     <div class="mt-8">
-                        <h5 class="text-text-main mt-8 pb-3 border-b border-grey-300 text-lg flex items-baseline justify-between">Options</h5>
+                        <h5 class="text-text-main mt-8 pb-3 border-b border-grey-300 text-lg flex items-baseline justify-between">{{table-type ?? 'Options'}}</h5>
                         <ul class="list-none p-0 m-0">
                             {{ options }}
-                            <li class="py-4 border-b border-grey-200">
+                            <li class="py-4 border-b last:border-0 border-grey-200">
                                 <h3 class="flex text-xs m-0 items-baseline flex-wrap relative pt-2">
                                     <span class="font-mono font-semibold text-text-main text-sm mr-1">{{option_name}}</span>
                                     <span class="font-mono text-grey-200 text-xs overflow-auto">{{ option_type }}</span>
